--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/malcolm-kee/intro-to-nodejs#readme",
   "dependencies": {
-    "csv-parse": "^5.0.3"
+    "csv-parse": "^5.0.3",
+    "pokemon": "^2.3.0"
   }
 }
