--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Materials for introduction to Node.js.",
   "scripts": {
     "get-emails:female": "node 01-fundamentals/get-emails.js F female-emails.txt",
-    "get-emails:male": "node 01-fundamentals/get-emails.js M male-emails.txt"
+    "get-emails:male": "node 01-fundamentals/get-emails.js M male-emails.txt",
+    "format": "prettier --write 01-fundamentals",
+    "format:check": "prettier --check 01-fundamentals"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "dependencies": {
     "csv-parse": "^5.0.3",
     "pokemon": "^2.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.5.1"
   }
 }
