install nodemon and use it

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "get-emails:male": "node 01-fundamentals/get-emails.js M male-emails.txt",
     "format": "prettier --write 01-fundamentals",
     "format:check": "prettier --check 01-fundamentals",
-    "emails:yahoo": "node 01-fundamentals/emails-by-provider.js yahoo"
+    "emails:yahoo": "node 01-fundamentals/emails-by-provider.js yahoo",
+    "dev:emails": "nodemon 01-fundamentals/emails-by-provider.js yahoo"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "pokemon": "^2.3.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   }
 }
