--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/malcolm-kee/intro-to-nodejs#readme",
   "dependencies": {
     "csv-parse": "^5.0.3",
+    "express": "^4.17.2",
     "pokemon": "^2.3.0"
   },
   "devDependencies": {
