--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "csv-parse": "^5.0.3",
     "express": "^4.17.2",
-    "pokemon": "^2.3.0"
+    "pokemon": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
